# serdebench

./: Cargo.toml  Makefile  build.rs  storeddata.capnp  storeddata.fbs  storeddata.proto  storeddata_capnp.rs  storeddata_generated.rs
benches/: bench.rs
