[package]
name = "serdebench"
version = "0.1.0"
authors = ["Andre Bogus <andre.bogus@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bincode = "1.3.1"
rmp-serde = "0.15"
flatbuffers = "0.7"
postcard = "0.5"
serde_cbor = "0.11.1"
serde_yaml = "0.8.13"
flexbuffers = "0.2"
ron = "0.6.0"
abomonation = { git = "https://github.com/TimelyDataflow/abomonation" }
abomonation_derive = "0.5.0"
capnp = "0.14.0"
simd-json = "0.3.22"
simd-json-derive = "0.1.15"
prost = "0.7"
rkyv = { version = "0.3", features = ["validation"] }
bytecheck = { version = "0.3" }
toml = "0.5"

[build-dependencies]
prost-build = { version = "0.7" }
capnpc = "0.14"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
